doc/ArtefatoGeneralista/MapaMental

--- a/docs/Base/1.Base.md
+++ b/docs/Base/1.Base.md
@@ -11,7 +11,7 @@ Foram criados alguns artefatos generalistas relacionados a Design Sprint. Eles s
 Os artefatos generalistas são:
 
 
-- [Mapa Mental]()
+- [Mapa Mental](/docs/Base/1.2.1.Mapa-mental.md)
 - [Rich Picture]()
 - [5W2H]()
 - [Léxicos]()
