Criação inicial do 5W2H

--- a/docs/Base/1.Base.md
+++ b/docs/Base/1.Base.md
@@ -8,12 +8,14 @@ Este componente documenta cada etapa do Design Sprint, uma metodologia ágil que
 ### [1.2 - Artefato Generalista](/Base/1.2.ArtefatoGeneralista.md)
 Foram criados alguns artefatos generalistas relacionados a Design Sprint. Eles são essenciais para o desenvolvimento do projeto, pois fornecem uma visão geral do sistema e ajudam a alinhar a equipe em relação aos objetivos e às necessidades do cliente.
 
+
+
 Os artefatos generalistas são:
 
 
 - [Mapa Mental](/docs/Base/1.2.1.Mapa-mental.md)
 - [Rich Picture]()
-- [5W2H]()
+- [5W2H](/docs/Base/1.2.3.5W2H.md)
 - [Léxicos]()
 
 
