fix/docs/5W2H: Inserindo contextualização sobre o que é o 5W2H e qual a importância dele para o projeto

--- a/docs/Base/1.2.3.5W2H.md
+++ b/docs/Base/1.2.3.5W2H.md
@@ -1,9 +1,16 @@
-# __5W2H relacionado ao Projeto EuMeAmo__
+# **5W2H relacionado ao Projeto EuMeAmo**
 
-## __Introdução__
+## **Introdução**
+
+O 5W2H é um **framework de validação de um plano de ação.** Na prática, é um instrumento que incentiva as pessoas a aderirem ao pensamento crítico para resolverem um problema complexo.
+
+Em sua essência, é um checklist que possibilita dividir uma tarefa em partes. Assim, fica mais fácil identificar onde você precisa concentrar seus esforços.
+
+A origem do 5W2H não é certa, mas a maior probabilidade é que seja um dos vários métodos que nasceram no auge do Sistema Toyota de Produção, no Japão. É conhecido também como uma das bases para a implementação de outras ferramentas e metodologias, como o **lean manufacturing** no chão de fábrica, bem como o **kanban** e **kaizen** para a **gestão de projetos**.
 
 Arquitetura 5W2H do Projeto “EuMeAmo”
- A seguir, apresentamos a estrutura 5W2H (What, Why, Where, When, Who, How, How Much) aplicada ao projeto “EuMeAmo”, plataforma de autocuidado focada em bem-estar e qualidade de vida.
+
+A seguir, apresentamos a estrutura 5W2H (What, Why, Where, When, Who, How, How Much) aplicada ao projeto “EuMeAmo”, plataforma de autocuidado focada em bem-estar e qualidade de vida.
 
 - **What (O quê?)**: Define o que será feito no projeto, especificando a atividade principal.
 - **Why (Por quê?)**: Explica a justificativa para a realização do projeto, destacando a sua importância.
@@ -15,27 +22,26 @@ Arquitetura 5W2H do Projeto “EuMeAmo”
 
 O 5W2H oferece uma estrutura simples e eficiente para alinhar as expectativas e promover uma execução organizada e clara do projeto.
 
-
-| Pergunta                | Descrição                                                                                                                                                                                                                                                                                                                                     |
-|-------------------------|-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
-| **What** (O quê?)|Será feito um aplicativo movel no qual ele vai auxiliar os usuarios a adotarem um novo estilo de vida mais saudavel. |
-| **Why** (Por quê?)|Promover qualidade de vida e bem estar, Facilitar o acesso a conteudos confiaveis e atender a crescente demanda de pessoas, Incentivar as pessoas a aderir rotinas mais saudaveis.|
-| **Who** (Onde?)|Será feito de forma remota.|
-| **Where** (Quando?)|Será feito no semestre 2025.1 24/03 até 26/07.|
-| **When** (Quem?)|Será desenvolvido pelos alunos do grupo 03. |
-| **How** (Como?)| Levantamento de requisitos, Formularios onlines, Analise de mercado de aplicativos similares.|
-| **How Much** (Quanto custa?)|Custos de desenvolvimento, buscar por patrocinadores e plataforma de hospedagem gratuita como "Netlify ou Vercel", Para Design/UX "Figma ou Miro", Campanhas e parcerias para custear os servidores mensalmente.  |
+| Pergunta                     | Descrição                                                                                                                                                                                                        |
+| ---------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| **What** (O quê?)            | Será feito um aplicativo movel no qual ele vai auxiliar os usuarios a adotarem um novo estilo de vida mais saudavel.                                                                                             |
+| **Why** (Por quê?)           | Promover qualidade de vida e bem estar, Facilitar o acesso a conteudos confiaveis e atender a crescente demanda de pessoas, Incentivar as pessoas a aderir rotinas mais saudaveis.                               |
+| **Who** (Onde?)              | Será feito de forma remota.                                                                                                                                                                                      |
+| **Where** (Quando?)          | Será feito no semestre 2025.1 24/03 até 26/07.                                                                                                                                                                   |
+| **When** (Quem?)             | Será desenvolvido pelos alunos do grupo 03.                                                                                                                                                                      |
+| **How** (Como?)              | Levantamento de requisitos, Formularios onlines, Analise de mercado de aplicativos similares.                                                                                                                    |
+| **How Much** (Quanto custa?) | Custos de desenvolvimento, buscar por patrocinadores e plataforma de hospedagem gratuita como "Netlify ou Vercel", Para Design/UX "Figma ou Miro", Campanhas e parcerias para custear os servidores mensalmente. |
 
 ## Referências
 
-- **BUZAN, Tony.** *Use Your Head.* BBC Active, 1974.  
-- **Discussões Internas do Grupo** sobre saúde, ergonomia e aplicativos similares (GymPass, Strava, Yazio, Posture).  
-- **Boas Práticas de UX**: Google Material Design, Apple Human Interface Guidelines.  
+- **BUZAN, Tony.** _Use Your Head._ BBC Active, 1974.
+- **Discussões Internas do Grupo** sobre saúde, ergonomia e aplicativos similares (GymPass, Strava, Yazio, Posture).
+- **Boas Práticas de UX**: Google Material Design, Apple Human Interface Guidelines.
 
 ---
 
 ## Histórico de Versão
 
-| **Versão** | **Data**    | **Descrição**                                             | **Autor(es)**          | **Revisor(es)**         | **Detalhes da Revisão**                                                     |
-|-----------:|------------:|-----------------------------------------------------------|------------------------|-------------------------|-----------------------------------------------------------------------------|
-| 1.0        | 03/04/2025  | Criação do documento 5W2H e estrutura inicial            | [Carlos, Lucas e Pablo]         | [Carlos, Lucas e Pablo]          | Documento inicial contendo todos os itens do 5W2H.                          |
+| **Versão** |   **Data** | **Descrição**                                 | **Autor(es)**           | **Revisor(es)**         | **Detalhes da Revisão**                            |
+| ---------: | ---------: | --------------------------------------------- | ----------------------- | ----------------------- | -------------------------------------------------- |
+|        1.0 | 03/04/2025 | Criação do documento 5W2H e estrutura inicial | [Carlos, Lucas e Pablo] | [Carlos, Lucas e Pablo] | Documento inicial contendo todos os itens do 5W2H. |
