fix/docs/5W2H: Atualizando referencia da introducao

--- a/docs/Base/1.2.3.5W2H.md
+++ b/docs/Base/1.2.3.5W2H.md
@@ -38,6 +38,8 @@ O 5W2H oferece uma estrutura simples e eficiente para alinhar as expectativas e 
 - **Discussões Internas do Grupo** sobre saúde, ergonomia e aplicativos similares (GymPass, Strava, Yazio, Posture).
 - **Boas Práticas de UX**: Google Material Design, Apple Human Interface Guidelines.
 
+- **5W2H: o que é, onde aplicar e como fazer em seu negócio** - [_Equipe TOTVS_](https://www.totvs.com/blog/negocios/5w2h/#:~:text=O%205W2H%20é%20um%20framework,âmbito%20corporativo%20e%20também%20pessoal.)
+
 ---
 
 ## Histórico de Versão
