fix/docs/5W2H: Atualizando a apresentação da estrutura 5W2H de acordo com a referência da TOTVS

--- a/docs/Base/1.2.3.5W2H.md
+++ b/docs/Base/1.2.3.5W2H.md
@@ -12,13 +12,13 @@ Arquitetura 5W2H do Projeto “EuMeAmo”
 
 A seguir, apresentamos a estrutura 5W2H (What, Why, Where, When, Who, How, How Much) aplicada ao projeto “EuMeAmo”, plataforma de autocuidado focada em bem-estar e qualidade de vida.
 
-- **What (O quê?)**: Define o que será feito no projeto, especificando a atividade principal.
-- **Why (Por quê?)**: Explica a justificativa para a realização do projeto, destacando a sua importância.
-- **Where (Onde?)**: Identifica o local ou ambiente em que as ações serão realizadas.
-- **When (Quando?)**: Estabelece o cronograma, especificando datas e prazos para cada etapa.
-- **Who (Quem?)**: Determina quem será responsável pela execução das ações, identificando as equipes e membros envolvidos.
-- **How (Como?)**: Descreve o método ou processo pelo qual o projeto será executado.
-- **How much (Quanto custa?)**: Apresenta uma estimativa dos custos envolvidos na realização do projeto.
+- **What (O quê?)**: Refere-se ao que aconteceu ou ao que está sendo analisado. É a descrição do fato ou evento em questão;
+- **Who (Quem?)**: Identifica as pessoas ou entidades envolvidas. Quem está agindo ou sendo afetado?
+- **Where (Onde?)**: Localiza geograficamente o evento ou a ação. Onde isso aconteceu ou vai acontecer?
+- **When (Quando?)**: Estabelece o tempo, o momento exato ou o período em que o fato ocorreu ou ocorrerá;
+- **Why (Por quê?)**: Explora os motivos, razões ou causas por trás do evento ou ação. Por que isso aconteceu?
+- **How (Como?)**: Descreve o processo, a maneira como algo aconteceu ou vai acontecer. Como isso foi feito ou será feito?
+- **How much (Quanto custa?)**: Refere-se a quantidade, custo ou extensão de algo. Quanto isso custou ou quantas unidades estão envolvidas?
 
 O 5W2H oferece uma estrutura simples e eficiente para alinhar as expectativas e promover uma execução organizada e clara do projeto.
 
