fix/docs/5W2H: Reestruturação da tabela 5W2H

--- a/docs/Base/1.2.3.5W2H.md
+++ b/docs/Base/1.2.3.5W2H.md
@@ -24,12 +24,12 @@ O 5W2H oferece uma estrutura simples e eficiente para alinhar as expectativas e 
 
 | Pergunta                     | Descrição                                                                                                                                                                                                        |
 | ---------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| **What** (O quê?)            | Será feito um aplicativo movel no qual ele vai auxiliar os usuarios a adotarem um novo estilo de vida mais saudavel.                                                                                             |
-| **Why** (Por quê?)           | Promover qualidade de vida e bem estar, Facilitar o acesso a conteudos confiaveis e atender a crescente demanda de pessoas, Incentivar as pessoas a aderir rotinas mais saudaveis.                               |
-| **Who** (Onde?)              | Será feito de forma remota.                                                                                                                                                                                      |
-| **Where** (Quando?)          | Será feito no semestre 2025.1 24/03 até 26/07.                                                                                                                                                                   |
-| **When** (Quem?)             | Será desenvolvido pelos alunos do grupo 03.                                                                                                                                                                      |
-| **How** (Como?)              | Levantamento de requisitos, Formularios onlines, Analise de mercado de aplicativos similares.                                                                                                                    |
+| **What** (O quê?)            | Projeto EuMeAmo.                                                                                                                                                                                                 |
+| **Who** (Quem?)              | Alunos do grupo EuMeAmo.                                                                                                                                                                                         |
+| **Where** (Onde?)            | Na FCTE ou Remotamente.                                                                                                                                                                                          |
+| **When** (Quando?)           | No semestre 2025.1                                                                                                                                                                                               |
+| **Why** (Por quê?)           | A necessidade de promover qualidade de vida e bem estar, facilitar o acesso a conteudos confiáveis, atender a crescente demanda de pessoas e incentivar as pessoas a aderir rotinas mais saudaveis.              |
+| **How** (Como?)              | Utilizando de metologias àgeis , ferramentas de levantamento de requisitos, análise de mercado de softwares similares e utilizando padrões de projeto.                                                           |
 | **How Much** (Quanto custa?) | Custos de desenvolvimento, buscar por patrocinadores e plataforma de hospedagem gratuita como "Netlify ou Vercel", Para Design/UX "Figma ou Miro", Campanhas e parcerias para custear os servidores mensalmente. |
 
 ## Referências
