fix/docs/5W2H: Atualizando o histórico de versões

--- a/docs/Base/1.2.3.5W2H.md
+++ b/docs/Base/1.2.3.5W2H.md
@@ -44,6 +44,7 @@ O 5W2H oferece uma estrutura simples e eficiente para alinhar as expectativas e 
 
 ## Histórico de Versão
 
-| **Versão** |   **Data** | **Descrição**                                 | **Autor(es)**           | **Revisor(es)**         | **Detalhes da Revisão**                            |
-| ---------: | ---------: | --------------------------------------------- | ----------------------- | ----------------------- | -------------------------------------------------- |
-|        1.0 | 03/04/2025 | Criação do documento 5W2H e estrutura inicial | [Carlos, Lucas e Pablo] | [Carlos, Lucas e Pablo] | Documento inicial contendo todos os itens do 5W2H. |
+| **Versão** |   **Data** | **Descrição**                                 | **Autor(es)**           | **Revisor(es)**         | **Detalhes da Revisão** |
+| ---------: | ---------: | --------------------------------------------- | ----------------------- | ----------------------- | ----------------------- |
+|        1.0 | 03/04/2025 | Criação do documento 5W2H e estrutura inicial | [Carlos, Lucas e Pablo] | [Carlos, Lucas e Pablo] |                         |
+|        1.1 | 05/04/2025 | Correção do documento 5W2H                    | [Lucas]                 | [Luiza, Mateus Levy]    |                         |
