--- a/docs/Base/1.Base.md
+++ b/docs/Base/1.Base.md
@@ -14,9 +14,9 @@ Os artefatos generalistas são:
 
 
 - [Mapa Mental](/docs/Base/1.2.1.Mapa-mental.md)
-- [Rich Picture]()
+- [Rich Picture](/docs/Base/1.2.2.RichPicture.md)
 - [5W2H](/docs/Base/1.2.3.5W2H.md)
-- [Léxicos]()
+- [Léxicos](/docs/Base/1.2.4.Lexicos.md)
 
 
 ### [1.3 - BPMN (para Scrum e XP)](/Base/1.3.ModelagemBPMN.md)
