Adicionado mais termos no lexico, esperando revisao.

--- a/docs/Base/1.2.4.Lexicos.md
+++ b/docs/Base/1.2.4.Lexicos.md
@@ -101,6 +101,36 @@
 - **Noção:** Estado físico, mental e emocional que a plataforma “Eu Me Amo” busca promover por meio dos seus conteúdos e funcionalidades.  
 - **Impacto:** Serve como objetivo central do sistema, influenciando a criação, organização e priorização de todas as funcionalidades e conteúdos desenvolvidos.
 
+**L11 - Comunidade**  
+- **Classificação:** Objeto  
+- **Sinônimos:** Grupo, Fórum  
+- **Noção:** Espaço de interação onde os usuários compartilham experiências, dicas e apoio sobre autocuidado.  
+- **Impacto:** Estimula a troca de conhecimentos e o suporte mútuo, fortalecendo a fidelização e o engajamento na plataforma.
+
+**L12 - Sessão de Consulta**  
+- **Classificação:** Objeto  
+- **Sinônimos:** Agendamento de consulta, Consulta com especialista  
+- **Noção:** Sessão realizada com profissionais especializados em saúde, bem-estar ou áreas relacionadas ao autocuidado.  
+- **Impacto:** Proporciona orientações personalizadas, reforça a credibilidade da plataforma e contribui para a promoção da saúde dos usuários.
+
+**L13 - Plano de Autocuidado**  
+- **Classificação:** Objeto/Conceito  
+- **Sinônimos:** Roteiro de bem-estar, Agenda de autocuidado  
+- **Noção:** Estrutura personalizada que organiza atividades, metas e recomendações de autocuidado para os usuários.  
+- **Impacto:** Facilita o acompanhamento dos progressos, ajudando os usuários a seguir rotinas consistentes e melhorando a qualidade de vida.
+
+**L14 - Estatísticas de Engajamento**  
+- **Classificação:** Objeto  
+- **Sinônimos:** Relatórios, Análises  
+- **Noção:** Conjunto de dados quantitativos e qualitativos que refletem a interação dos usuários com as funcionalidades da plataforma.  
+- **Impacto:** Permite à equipe analisar comportamentos e tendências, orientando melhorias e adaptações para otimização da experiência do usuário.
+
+**L15 - Conteúdo Educativo**  
+- **Classificação:** Objeto  
+- **Sinônimos:** Artigo, Tutorial, Dica  
+- **Noção:** Materiais informativos focados em promover a saúde, o bem-estar e práticas de autocuidado, como tutoriais, artigos e dicas.  
+- **Impacto:** Estimula a disseminação de conhecimento e práticas saudáveis, apoiando a missão educativa da plataforma “Eu Me Amo”.
+
 
 # Histórico de Versão
 
